<!--10120150-Rahmat-IF4-->
<resources>
    <string name="app_name">UTS_10120150</string>
    <string name="profile">Profile</string>
    <string name="note">Notes</string>
    <string name="info">Info</string>
    <string name="nim">10120150</string>
    <string name="nama">Rahmat</string>
    <string name="kelas">IF4</string>
    <string name="email">rahmat.karis@gmail.com</string>
    <string name="txt_welcome">UTS AKB</string>
    <string name="txt_intro">UNIKOM 2023</string>
    <string name="copyright">Copyright ©2023 Rahmat. All Rights Reserved</string>
    <string name="page1">Page 1 of 2</string>
    <string name="page2">Page 2 of 2</string>
    <string name="geser">Geser untuk info aplikasi >></string>
    <string name="memo">Selamat Datang</string>
    <string name="penjelasan">Pergi Ke Halaman Notes dan Klik + Untuk Membuat Catatan Baru</string>
    <string name="about_app">Aplikasi ini dibuat untuk memenuhi Ujian Tengah Semester Mata Kuliah Aplikasi Komputasi Bergerak</string>
    <string name="txt_add">Tambah Catatan</string>
</resources>