<?xml version="1.0" encoding="utf-8"?>
<!--10120150-Rahmat-IF4-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.InfoFragment2">

    <TextView
        android:id="@+id/navigation_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/page2"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="123dp"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/txt_welcome"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:fontFamily="serif"
        android:text="@string/txt_welcome"/>
    <TextView
        android:id="@+id/txt_intro"
        android:layout_below="@id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:fontFamily="serif"
        android:text="@string/txt_intro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@id/txt_intro">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:fontFamily="@font/sedan"
            android:text="@string/about_app"/>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/copyright" />

</RelativeLayout>