<?xml version="1.0" encoding="utf-8"?>
<!--10120150-Rahmat-IF4-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/foto"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mecircle" />

        <TextView
            android:id="@+id/txt_nim"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:layout_below="@id/txt_nama"
            android:text="@string/nama"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/foto"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:padding="10dp"
            android:text="@string/nim"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_kelas"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:layout_below="@id/txt_nim"
            android:text="@string/kelas"
            android:textSize="17dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_email"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_kelas"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:padding="10dp"
            android:text="@string/email"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/copyright" />
</RelativeLayout>