<?xml version="1.0" encoding="utf-8"?>
<!--10120150-Rahmat-IF4-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.InfoFragment1">

    <TextView
        android:id="@+id/navigation_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/page1"/>

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/title_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:fontFamily="@font/scriptmt"
            android:textColor="@color/black"
            android:text="@string/memo"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@id/layout_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:fontFamily="@font/sedan"
            android:text="@string/penjelasan"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="155dp"
        android:layout_height="165dp"
        android:layout_centerInParent="true"
        android:src="@drawable/notebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/geser" />

</RelativeLayout>